debian/rules: build with make --no-print-directory
The Makefile relies on make being silent to determine
the kernel version.

Signed-off-by: Heinrich Schuchardt <xypron.glpk@gmx.de>

--- a/debian/rules
+++ b/debian/rules
@@ -11,3 +11,8 @@ export DH_OPTIONS
 %:
 	dh $@
 
+override_dh_auto_build:
+	make --no-print-directory
+
+override_dh_auto_install:
+	make --no-print-directory install DESTDIR=debian/odroid-c2-kernel-image
