Create new development package
Signed-off-by: Heinrich Schuchardt <xypron.glpk@gmx.de>

--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: odroid-c2-kernel
+Source: odroid-c2-dev-kernel
 Section: kernel
 Priority: optional
 Maintainer: Heinrich Schuchardt <xypron.glpk@gmx.de>
@@ -7,7 +7,7 @@ Build-Depends: debhelper, cpio, kmod, python, python-six, bc, gcc,
 Standards-Version: 3.9.4.0
 Homepage: https://www.kernel.org/
 
-Package: odroid-c2-kernel-image
+Package: odroid-c2-dev-kernel-image
 Architecture: arm64
 Section: debian-installer
 Priority: standard
