--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: odroid-c2-dev-kernel
+Source: firefly-rk3399-dev-kernel
 Section: kernel
 Priority: optional
 Maintainer: Heinrich Schuchardt <xypron.glpk@gmx.de>
@@ -7,9 +7,9 @@ Build-Depends: debhelper, cpio, kmod, python, python-six, bc, gcc,
 Standards-Version: 3.9.4.0
 Homepage: https://www.kernel.org/
 
-Package: odroid-c2-dev-kernel-image
+Package: firefly-rk3399-dev-kernel-image
 Architecture: arm64
 Section: debian-installer
 Priority: standard
-Description: Kernel image for Odroid C2
- This package contains the linux kernel image for the Odroid C2.
+Description: Kernel image for Firefly-RK3399
+ This package contains the linux kernel image for the Firefly-RK3399.
